# Microscopic-Remaining-Oil-Dynamic-Evolution

./: README.md  pyproject.toml
microscopic_remaining_oil_dynamic_evolution/: __init__.py  model.py  preprocessing.py
tests/: test_model.py
